Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
       </header>
       <section>
         <h1>
-<a id="cmdio" class="anchor" href="#cmdio" aria-hidden="true"><span class="octicon octicon-link"></span></a>cmdio</h1>
+<a id="cmdio-wip" class="anchor" href="#cmdio-wip" aria-hidden="true"><span class="octicon octicon-link"></span></a>cmdio (WIP)</h1>
 
-<p>Execute cmd.exe commands in native bash shell.</p>
+<p>Execute cmd.exe commands in native bash shell, cmdio will handle flag and file name conversion.</p>
+
+<div class="highlight highlight-sh"><pre>npm install -g cmdio</pre></div>
       </section>
     </div>
     <footer>
